--- a/notebooks/2.0.1-data-analysis-business.ipynb
+++ b/notebooks/2.0.1-data-analysis-business.ipynb
@@ -574,7 +574,7 @@
     "ax2 = sns.barplot(data=state_customers.nlargest(10, columns='n_customers'), y='state', x='n_customers', ax=axes[2], palette=c3)\n",
     "ax2.set_ylabel('State')\n",
     "ax2.set_xlabel('Total Customers')\n",
-    "ax2.set_title('Top 10 State dengan Jumlah Pendapatan Tertinggi',fontsize=14)\n",
+    "ax2.set_title('Top 10 State dengan Jumlah Pelanggan Tertinggi',fontsize=14)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
