finalize data-prep

--- a/notebooks/1-data-preparation.ipynb
+++ b/notebooks/1-data-preparation.ipynb
@@ -32,7 +32,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **1. Data Understanding**\n",
+    "# **1. Data Preparation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **1.1 Data Understanding**\n",
     "\n",
     "Ini adalah dataset publik e-commerce Brasil dari pesanan yang dibuat di Olist Store. Dataset ini memiliki informasi dari 100 ribu pesanan dari tahun 2016 hingga 2018 yang dibuat di beberapa pasar di Brasil. Fitur-fiturnya memungkinkan untuk melihat pesanan dari berbagai dimensi: mulai dari status pesanan, harga, pembayaran, dan kinerja pengiriman hingga lokasi pelanggan, atribut produk, dan akhirnya ulasan yang ditulis oleh pelanggan. Selain itu ada juga dataset geolokasi yang menghubungkan kode pos Brasil dengan koordinat bujur/lintang."
    ]
@@ -41,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **1.1 Data Schema**\n",
+    "### **1.1.1 Data Schema**\n",
     "\n",
     "Data dibagi dalam beberapa dataset. Skema data bisa dilihat pada gambar berikut:\n",
     "<p> <p>\n",
@@ -66,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **1.2 Feature Description**\n",
+    "### **1.1.2 Feature Description**\n",
     "\n",
     "Berikut adalah fitur-fitur yang tersedia dalam dataset:\n",
     "<p> <p>\n",
@@ -81,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **1.3 Data Skimming**"
+    "### **1.1.3 Data Skimming**"
    ]
   },
   {
@@ -2440,14 +2447,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **2. Data Cleaning**"
+    "## **1.2 Data Cleaning**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **2.1 Before Merge**"
+    "### **1.2.1 Before Merge**"
    ]
   },
   {
@@ -3079,7 +3086,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **2.2 Merge Datasets**"
+    "### **1.2.2 Merge Datasets**"
    ]
   },
   {
@@ -3818,7 +3825,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **2.3 Missing Values**"
+    "### **1.2.3 Missing Values**"
    ]
   },
   {
@@ -4860,7 +4867,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **2.4 Add State Name Column**"
+    "### **1.2.4 Add State Name Column**"
    ]
   },
   {
@@ -4907,7 +4914,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **2.5 Data Types**"
+    "### **1.2.5 Data Types**"
    ]
   },
   {
@@ -5403,14 +5410,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **2.6 Outliers**"
+    "### **1.2.6 Outliers**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **2.6.1 payment_value**"
+    "#### **payment_value**"
    ]
   },
   {
@@ -5613,7 +5620,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **2.7 Save Data**"
+    "### **1.2.7 Save Data**"
    ]
   },
   {
@@ -5629,7 +5636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#master_data.to_csv(\"../data/processed/master_data.csv\", index=False)"
+    "master_data.to_csv(\"../data/processed/master_data.csv\", index=False)"
    ]
   }
  ],
