--- a/notebooks/5.0.1-kesimpulan dan rekomendasi.ipynb
+++ b/notebooks/5.0.1-kesimpulan dan rekomendasi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Kesimpulan**"
+    "### **5.1 Kesimpulan**"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Rekomendasi**"
+    "### **5.2 Rekomendasi**"
    ]
   },
   {
